--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="read_permission">edu.fsu.cs.runwarrior.READ_PERMISION</string>
     <string name="write_permission">edu.fsu.cs.runwarrior.WRITE_PERMISION</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
